<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rekola</string>

    <string name="font_roboto_medium" translatable="false">fonts/Roboto-Medium.ttf</string>
    <string name="font_roboto_light" translatable="false">fonts/Roboto-Light.ttf</string>
    <string name="font_roboto_bold" translatable="false">fonts/Roboto-Bold.ttf</string>
    <string name="font_roboto_italic" translatable="false">fonts/Roboto-Italic.ttf</string>
    <string name="font_roboto_regular" translatable="false">fonts/Roboto-Regular.ttf</string>


    <string name="ok">OK</string>

    <string name="login_username_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_log_in">Sign in</string>
    <string name="login_registration">Register</string>
    <string name="login_connecting">Connecting…</string>
    <string name="login_connecting_progress">Almost there…</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="login_ackee">Mobile app by</string>

    <string name="reset_title">Reset Password</string>
    <string name="reset_reset">Reset</string>
    <string name="reset_info">Enter your email to get instructions on how to reset your password.</string>
    <string name="reset_recall">I remembered, go back</string>

    <string name="borrow_info_1">Enter the 6-digit code to receive the lock passcode and start using your bike</string>
    <string name="borrow_info_2">Code can be found on a bike or scooter.</string>
    <string name="borrow_borrow">Borrow</string>
    <string name="borrow_code_hint">Enter 6-digit code</string>
    <string name="borrow_if_problem">If there is any problem, please call us at&#160;</string>
    <string name="borrow_phone">+420 778 099 878</string>
    <string name="borrow_we_will_help">We will help you.</string>

    <string name="return_borrowed">Borrowed</string>
    <string name="return_info_lock_code">Lock code</string>
    <string name="return_return">Return</string>
    <string name="return_bike_detail">Detail</string>
    <string name="return_bike_issue">Report Issue</string>

    <string name="returnmap_title">Edit Location</string>
    <string name="returnmap_note_hint">Describe the exact bike location. (e.g. 3rd lamp from the bus stop)</string>
    <string name="returnmap_bike_returned">Return</string>
    <string name="returnmap_bike_position">The exact position of bike</string>
    <string name="returnmap_dialog_position">Please write exact position of bike</string>

    <string name="profile_membership_end">Membership will end</string>
    <string name="profile_email">Email</string>
    <string name="profile_address">Address</string>
    <string name="profile_phone">Phone</string>
    <string name="profile_logout">Logout</string>

    <string name="about_title">About app</string>
    <string name="about_text">Created with love at</string>

    <string name="webbikedetail_title">Bike Detail</string>

    <string name="bike_inoperational">Warning, inoperational!</string>
    <string name="bike_operational_with_issues">Operational with issues</string>

    <!-- Bike name parameter -->
    <string name="menu_borrow">Borrow</string>
    <string name="menu_return">Return</string>
    <string name="menu_map">Map</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Log out</string>

    <!-- Bike detail -->
    <string name="bike_detail_recently_returned">Recently returned</string>
    <string name="bike_detail_equipments">Equipments</string>
    <string name="bike_detail_equipment_info">More info</string>
    <string name="bike_detail_issues">Issues</string>
    <string name="bike_detail_add_issue">Add issue</string>
    <string name="bike_detail_no_issue">I am happy bike, I have no issues :)</string>

    <!-- Add issue -->
    <string name="add_issue_title">Report an issue</string>
    <string name="add_issue_type">Issue type</string>
    <string name="add_issue_detail_description">Detail issue description</string>
    <string name="add_issue_inoperational">Bike is inoperational</string>
    <string name="add_issue_report_issue">Report issue</string>
    <string name="add_issue_success">Issue was successfully reported, thank you!</string>

    <!-- Notification -->
    <string name="notification_message">Did you forget to return a bike?</string>

    <!-- Error messages -->
    <string name="error_network">Connection problem.</string>
    <string name="error_missing_credentials">Fill in your email and password.</string>
    <string name="error_missing_username">Fill in your email.</string>
    <string name="error_title_login_failed">Login failed.</string>
    <string name="error_title_password_recovery_failed">Password recovery failed.</string>
    <string name="error_get_bikes_failed">Failed to download bikes\' info.</string>
    <string name="error_get_bike_failed">Failed to download bike info.</string>
    <string name="error_get_account_failed">Failed to download account info.</string>
    <string name="error_get_borrowed_bike_failed">Failed to download borrowed bike info.</string>
    <string name="error_borrow_bike_failed">Failed to borrow a bike.</string>
    <string name="error_return_bike_failed">Failed to return the bike.</string>
    <string name="error_get_boundaries_failed">Failed to download boundaries.</string>
    <string name="error_incorrect_bike_code">Incorrect bike code.</string>
    <string name="error_no_bike_borrowed">No bike borrowed.</string>
    <string name="error_unknown_borrowed_bike_code">Unknown borrowed bike code.</string>
    <string name="error_bike_details_failed">Failed to load bike details.</string>
    <string name="error_web_load_failed">Failed to load details.</string>
    <string name="error_get_pois_failed">Failed to download info about places of interest.</string>
    <string name="error_get_default_values_failed">Failed to download default values.</string>
    <string name="error_directions">Failed to load directions.</string>
    <string name="error_report_issue">Failed to report issue.</string>
    <string name="error_old_app_version">Sorry, but your application is outdated.\n\nPlease upgrade to latest version.</string>
    <string name="error_session_expired">You have been logged out.</string>
    <string name="error_fill_issue_description">Please, fill issue description.</string>
    <string name="error_select_issue_type">Please, select issue type.</string>

    <!-- Success messages -->
    <string name="success_password_recovery">Please, check your email for further password recovery instructions.</string>
</resources>
