<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             style="@style/Layout"
             android:layout_marginLeft="@dimen/grid_5"
             android:layout_marginRight="@dimen/grid_5"
             android:layout_marginTop="@dimen/grid_5"
             tools:context="cz.rekola.app.fragment.natural.ProfileFragment">

    <LinearLayout
        style="@style/Layout"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/txt_user_name"
            style="@style/TitleTextView"
            android:layout_marginBottom="@dimen/grid_2"
            android:text="Korben Dallas"
            android:textSize="@dimen/text_xxxlarge"/>

        <LinearLayout
            style="@style/Layout"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/grid_3"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView"
                android:layout_width="wrap_content"
                android:text="@string/profile_membership_end"
                android:textColor="@color/pink_1"/>

            <TextView
                android:id="@+id/txt_membership_end_date"
                style="@style/TextView"
                android:layout_width="wrap_content"
                android:paddingLeft="5dp"
                android:text="29.9. 2015"
                android:textColor="@color/pink_1"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:id="@+id/btn_logout"
            style="@style/TextViewGreenBorder"
            android:layout_width="wrap_content"
            android:layout_marginBottom="@dimen/grid_5"
            android:drawableLeft="@drawable/ic_logout"
            android:drawablePadding="7dp"
            android:text="@string/profile_logout"/>


        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"

                    tools:context=".GridLayoutActivity">

            <TextView
                style="@style/TextViewGridDescription"
                android:text="@string/profile_email"/>

            <TextView
                android:id="@+id/txt_email"
                style="@style/TextViewGridValue"
                android:text="@string/profile_email"/>


            <TextView
                style="@style/TextViewGridDescription"
                android:text="@string/profile_address"/>

            <TextView
                android:id="@+id/txt_address"
                style="@style/TextViewGridValue"
                android:text="@string/profile_address"/>

            <TextView
                style="@style/TextViewGridDescription"
                android:text="@string/profile_phone"/>

            <TextView
                android:id="@+id/txt_phone"
                style="@style/TextViewGridValue"
                android:text="@string/profile_phone"/>

        </GridLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_about"
        style="@style/ButtonGrey"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/grid_6"
        android:text="@string/about_title"/>

</FrameLayout>
