<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            style="@style/Layout">

    <LinearLayout
        style="@style/LayoutMargin"
        android:layout_gravity="center_vertical"
        tools:context="cz.rekola.app.fragment.natural.AddIssueFragment">

        <TextView
            style="@style/TitleTextView"
            android:layout_gravity="start"
            android:layout_marginBottom="10dp"
            android:text="@string/add_issue_type"
            />

        <Spinner
            android:id="@+id/spn_issue_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/spinner_pink"
            />

        <TextView
            style="@style/TitleTextView"
            android:layout_gravity="start"
            android:layout_marginBottom="5dp"
            android:text="@string/add_issue_detail_description"
            />


        <EditText
            android:id="@+id/txt_issue_description"
            style="@style/EditTextPinkBorder"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:gravity="start"
            android:imeOptions="actionDone"
            android:inputType="text|textCapSentences|textMultiLine"
            android:lines="2"
            android:maxLines="2"
            android:minLines="2"
            android:scrollbars="vertical"
            android:textColor="@color/black"
            android:textSize="14sp"
            />

        <CheckBox
            android:id="@+id/chk_inoperational"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:button="@drawable/checkbox_button"
            android:paddingLeft="10dp"
            android:text="@string/add_issue_inoperational"
            android:textColor="@color/grey5"/>

        <Button
            android:id="@+id/btn_report_issue"
            style="@style/ButtonPink"
            android:layout_gravity="center"
            android:text="@string/add_issue_report_issue"
            android:textSize="@dimen/text_medium"/>

    </LinearLayout>
</ScrollView>